tests/errors/subroutine5.f90
subroutine add(a, b, c)
real, intent(in) :: a, b
real, intent(out) :: c
c = a + d
end subroutine
